# famicon_emulator

./: .gitignore  Cargo.toml  Readme.md
scrape/: package-lock.json  package.json  scrape.js
src/: apu.rs  bus.rs  cartrige.rs  cpu.rs  frame.rs  joypad.rs  main.rs  mapper.rs  onepiece.rs  opscodes.rs  ppu.rs  render.rs  rom.rs  sound_test.rs  types.rs
src/apu/: dmc.rs
