[package]
name = "famicon_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
rand = "0.8.5"
sdl2 = "0.35.2"
env_logger = "0.10.0"
log = "0.4.18"
once_cell = "1.18.0"

# entry point
# cargo run --bin main
[[bin]]
name = "main"
path = "src/main.rs"

# cargo run --bin sound
[[bin]]
name = "sound"
path = "src/sound_test.rs"
